--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       Your browser does not support the video tag.
   </video>
   <div class="content"></div>
-  <h1>LET'S DANCE!!</h1> <!-- Ini adalah elemen yang ingin kita ubah -->
+  <h1>MENARILAH SESUKAMU!!</h1> <!-- Ini adalah elemen yang ingin kita ubah -->
     </div>
     <audio id="suara" controls style="display: none;"></audio> <!-- Kontrol audio disembunyikan -->
   </div>
